<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumoPacoteActivity">

    <ImageView
        android:id="@+id/resumo_pacote_foto"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/imagem_descricao"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/belo_horizonte_mg" />

    <TextView
        android:id="@+id/resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_foto"
        tools:text="Belo Horizonte" />

    <TextView
        android:id="@+id/resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_local"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/resumo_pacote_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_preco"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_dias"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_dias"
        tools:text="08/12 - 10/12 de 2018" />

    <TextView
        android:id="@+id/resumo_pacote_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_final"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_preco"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_preco" />

    <TextView
        android:id="@+id/resumo_pacote_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textAlignment="textEnd"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/resumo_pacote_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resumo_pacote_data"
        tools:text="R$ 299,99" />

    <Button
        android:id="@+id/resumo_pacote_btn_realizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/realizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>